filter by land name

--- a/assets/css/MainPage.css
+++ b/assets/css/MainPage.css
@@ -51,7 +51,7 @@
   display: inline-block;
 }
 
-#dd-button {
+#dd-button,#land-name-filter {
   background-color: #EFEFEF;
   border-color: #EFEFEF;
   color: gray;
