--- a/assets/css/MainLoginPage.css
+++ b/assets/css/MainLoginPage.css
@@ -5,7 +5,7 @@ body {
   font-family: 'CS ChatThai';
 }
 
-#bg-mobile{
+#bg-mobile {
   width: 100%;
   height: 100vh;
   position: absolute;
@@ -79,7 +79,6 @@ body {
 
 }
 
-
 .carousel-item {
   /*max-width: 500px;*/
   max-height: 150%;
@@ -97,6 +96,10 @@ body {
   object-fit: cover;
   /*object-position: center;*/
   /*opacity: 50;*/
+}
+
+#title-div {
+  width: 100%;
 }
 
 #title {
