--- a/public/css/addActivityPage.css
+++ b/public/css/addActivityPage.css
@@ -33,7 +33,7 @@
   display: inline-block;
   vertical-align: middle;
   font-size: 1.4rem;
-  background-color: #408214;
+  /* background-color: #408214; */
 
 }
 
