--- a/public/css/MainPage.css
+++ b/public/css/MainPage.css
@@ -9,14 +9,16 @@
 }
 
 #dd-button,
-#land-name-filter,#plant-filter {
+#land-name-filter,
+#plant-filter {
   background-color: #EFEFEF;
   border-color: #EFEFEF;
   color: gray;
   font-size: 1.4rem;
 }
-#map{
-  flex:1
+
+#map {
+  flex: 1
 }
 
 #addLandBtn {
@@ -25,7 +27,7 @@
   font-size: 1.8rem;
 }
 
-.content-wrapper{
+.content-wrapper {
   display: -ms-flex;
   display: -webkit-flex;
   display: flex;
@@ -35,4 +37,27 @@
   .dropdown {
     width: 100%;
   }
+}
+
+.pie-chart {
+  width: 49px;
+  height: 30px;
+  position: absolute;
+  vertical-align: middle;
+  margin-top: 30px;
+  margin-left: -69px;
+  border: 0px none;
+  background: rgba(0, 0, 0, 0) none repeat scroll 0% 0%;
+  font: bold 18px Arial;
+  text-align: center;
+  color: rgb(247, 102, 71);
+  padding: 0px;
+  -moz-appearance: none;
+}
+
+.pie-chart {
+	background-color: #1d1d1d;
+	font-size: 18rem;
+	-webkit-text-stroke: 5px #1d1d1d;
+	text-shadow: 0px 4px 4px #1d1d1d;
 }
