--- a/public/css/landDetail.css
+++ b/public/css/landDetail.css
@@ -3,7 +3,7 @@
 
   font-size:1.4rem;
   background-color: #408214;
-  
+
 }
 #harvestFull{
   display: inline-block;
@@ -24,14 +24,13 @@
 
 #showActivity{
   text-align: center;
-  
+
 }
 
 #activityTable{
   margin-left:auto;
   margin-right:auto;
   border-collapse: separate;
-  border-spacing: 5rem 0;
 }
 
 #viewAllActivities{
@@ -62,6 +61,16 @@
   margin-right: 2vw;
 }
 
+#plant-name-filter {
+  background-color: #EFEFEF;
+  border-color: #EFEFEF;
+  color: gray;
+  font-size: 1.4rem;
+  width: 100%;
+  text-align: left;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
 @media screen and (max-width: 992px) {
   #activityTable{
     font-size: 1.4rem;
@@ -80,6 +89,10 @@
   }
   #bt-harvest-nav {
     display: block;
+  }
+
+  .content-header{
+    display: none;
   }
 
 }
