--- a/public/css/MainPage.css
+++ b/public/css/MainPage.css
@@ -8,13 +8,25 @@
   display: inline-block;
 }
 
-#dd-button,
-#land-name-filter,
-#plant-filter {
+ .btn-primary.disabled, .btn-primary:disabled {
+  background-color: rgb(211, 211, 211);
+  border-color: rgb(211, 211, 211);
+  font-size: 1.4rem;
+  color: gray;
+
+}
+
+.land-filter input {
+  padding: 0;
+  border: none;
+  background: none;
+  color: gray;
+}
+
+.land-filter{
   background-color: #EFEFEF;
   border-color: #EFEFEF;
-  color: gray;
-  font-size: 1.4rem;
+  color: rgb(75, 75, 75);
 }
 
 #map {
@@ -56,8 +68,8 @@
 }
 
 .pie-chart {
-	background-color: #1d1d1d;
-	font-size: 18rem;
-	-webkit-text-stroke: 5px #1d1d1d;
-	text-shadow: 0px 4px 4px #1d1d1d;
+  background-color: #1d1d1d;
+  font-size: 18rem;
+  -webkit-text-stroke: 5px #1d1d1d;
+  text-shadow: 0px 4px 4px #1d1d1d;
 }
