--- a/public/css/allelements.css
+++ b/public/css/allelements.css
@@ -33,7 +33,9 @@
    padding-right:3rem;
  }
  .content-wrapper {
+  /* min-height: unset; */
   background:#ffff;
+  /* min-height: calc(100% - 2rem); */
   overflow-y: scroll;
 }
 .card-title{
