--- a/public/css/mainPlantPage.css
+++ b/public/css/mainPlantPage.css
@@ -1,26 +1,62 @@
-.body-plant{
-background-color:rgba(75, 75, 75, 0.247)
+.body-plant {
+  background-color: rgba(75, 75, 75, 0.247)
 }
-.c-plant{
+
+.c-plant {
   height: 200px;
   object-fit: cover;
   object-position: center;
   background-image: url("https://gdb.voanews.com/24A4525A-A09E-42FF-A1CE-B0C291CE5325_cx0_cy11_cw0_w408_r1_s.jpg");
 }
-.plant-name{
+
+.plant-name {
   cursor: pointer;
-  position: absolute;
+  /* position: absolute; */
   align-self: center;
   width: 200px;
-  margin-top: 90px;
+  /* margin-top: 90px; */
+  padding-top: 90px;
+  /* margin: auto; */
   text-align: center;
   color: white;
 }
-.cover-black{
+
+.cover-black {
   width: 200px;
   height: 200px;
-  position: absolute;
+  /* position: absolute; */
   cursor: pointer;
-  background-color:rgba(63, 63, 63, 0.678);
+  background-color: rgba(63, 63, 63, 0.678);
   border-radius: 10px;
+}
+
+.block-plant {
+  background-color: rgba(63, 63, 63, 0.678);
+  border-radius: 10px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+
+@media screen and (max-width: 992px) {
+  .content-header {
+    display: none;
+  }
+
+  .total-small {
+    display: block
+  }
+
+  .total-big {
+    display: none
+  }
+
+  .activities-big {
+    display: none
+  }
+
+  .activities-small {
+    display: block
+  }
+
 }
