--- a/public/css/reportPerLand.css
+++ b/public/css/reportPerLand.css
@@ -12,6 +12,10 @@
   display:none
 }
 
+tr{
+  cursor: pointer;
+}
+
 @media screen and (max-width: 992px) {
   .content-header{
     display: none;
