--- a/public/css/allelements.css
+++ b/public/css/allelements.css
@@ -3,17 +3,13 @@ body {
   font-family: 'Sarabun' ;
   background-size: cover;
   overflow-x: hidden;
-  font-size: 1.2rem;
+  font-size: 1.1rem;
 
 }
 
 
 .btn {
-  font-size: 1.4rem;
-}
-
-button {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
 }
 
 #map {
@@ -42,7 +38,7 @@ button {
 }
 
 .card-title {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
 }
 
 .content-header {
@@ -108,7 +104,7 @@ button {
 
 a {
   cursor: pointer;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
 }
 
 
@@ -122,7 +118,7 @@ a {
 }
 
 #band-name {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   font-weight: bold;
 }
 
@@ -136,25 +132,25 @@ a {
 }
 
 .gm-style .gm-style-iw-d {
-  font-family: 'CS ChatThai';
+  font-family: 'Sarabun' ;
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 10px;
   margin-bottom: 10px;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
 }
 
 .gm-style .gm-style-iw-d h5 {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   text-align: center;
 }
 
 .form-control {
-  font-size: 1.4rem;
+  font-size: 1.1rem;
 }
 
 h4 {
-  font-size: 1.8rem;
+  font-size: 1.3rem;
 }
 
 #bar-header {
@@ -196,7 +192,7 @@ h4 {
 
 .table-condensed tr td,
 th {
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 /* !Date picker*/
@@ -205,7 +201,7 @@ th {
 
   body,
   a {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 
   body {
@@ -213,11 +209,11 @@ th {
   }
 
   .content {
-    margin-bottom: 30vh;
+    margin-bottom: 40vh;
   }
 
   h4 {
-    font-size: 1.5rem
+    font-size: 1.3rem
   }
 
 
@@ -279,7 +275,7 @@ th {
   }
 
   .btn {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
   }
 }
 
