--- a/public/css/calendarStyle.css
+++ b/public/css/calendarStyle.css
@@ -1,16 +1,11 @@
-body {
-  font-family: 'CS ChatThai';
-  background-size: cover;
-  overflow-x: hidden;
-  font-size: 1.4rem;
-}
+
 
 
   #calendar{
-    font-family: 'CS ChatThai';
+    font-family: 'Sarabun' ;
   }
 
-  
+
   .table-responsive{
     border-radius: 10px;
   }
@@ -24,26 +19,25 @@ body {
   }
 
   .fc-toolbar h2{
-    font-size: 2.0rem
+    font-size: 1.4rem
   }
   .fc-right div.btn-group button{
     font-size: 1.0rem
   }
-  
+
   @media screen and (max-width: 992px) {
     #activities-mobile{
       display: block;
     }
     .fc-toolbar h2{
-      font-size: 1.8rem
+      font-size: 1.4rem
     }
     .fc-today-button{
       display:none
     }
-  
+
     #activities-browser{
       display: none;
     }
   }
 
-  
